--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.3.1",
     "typescript": "^4.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SanyamPunia/next-medium-zoom.git"
   }
 }
